# my_diffbot

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.repos  docker-compose.yaml
.cache/clangd/index/: my_diffbot_system.cpp.E42CEF192BC60230.idx  my_diffbot_system.hpp.6C813006E040BF86.idx  serial_communications.hpp.AA0C5F4F6E197FED.idx
.github/workflows/: lint.yaml  ros2.yaml
docker/: Dockerfile  entrypoint.sh
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/development/: control.rst  docker.rst  index.rst
docs/source/getting_started/: cbot_bringup.rst  cbot_ekf_localization.rst  cbot_slam.rst  index.rst  launch_system.rst  view_cbot.rst
my_diffbot_bringup/: CMakeLists.txt  package.xml
my_diffbot_bringup/config/: base_controllers.yaml  imu_bno055.yaml  lidar_filters.yaml
my_diffbot_bringup/launch/: bringup_robot.launch.py  imu_bno055.launch.py  imu_bno055_bringup.launch.py  lidar_bringup.launch.py  robot_controllers.launch.py  visualize_robot.launch.py
my_diffbot_bringup/rviz/: config.rviz
my_diffbot_description/: CMakeLists.txt  README.md  package.xml
my_diffbot_description/launch/: display_description.launch.py
my_diffbot_description/rviz/: config.rviz
my_diffbot_description/urdf/: my_diffbot.urdf.xacro  my_diffbot_description.xacro  my_diffbot_gz_sim.xacro  my_diffbot_ros2_control.xacro
my_diffbot_hardware_interface/: CMakeLists.txt  my_diffbot_hardware_interface.xml  package.xml
my_diffbot_hardware_interface/include/my_diffbot_hardware_interface/: my_diffbot_system.hpp  serial_communications.hpp
my_diffbot_hardware_interface/src/: my_diffbot_system.cpp
my_diffbot_localization/: CMakeLists.txt  package.xml
my_diffbot_localization/config/: localization_ekf.yaml
my_diffbot_localization/launch/: my_diffbot_ekf_localization.launch.py
my_diffbot_navigation/: CMakeLists.txt  package.xml
my_diffbot_navigation/launch/: my_diffbot_nav_bringup_launch.py  my_diffbot_navigation_launch.py  my_diffbot_slam_launch.py  nav_bringup_launch.py  rviz_launch.py
my_diffbot_navigation/params/: nav2_params.yaml  slam_online_async.yaml  slam_online_sync.yaml
my_diffbot_navigation/rviz/: nav2_view.rviz
scripts/: 97-ldlidar.rules
